# gsl-interp-wrappers

./: #Interpolant1D_test.cpp#  .gitignore  CMakeLists.txt  GPATH  GRTAGS  GSL_wrappersConfig.cmake.in  GSL_wrappersConfigVersion.cmake.in  GTAGS  Interpolant1D.h  Interpolant1D_test.cpp  Interpolation1DConfig.cmake.in
src/GSL_wrappers/: CMakeLists.txt  CMakeLists.txt.BACKUP.5454.txt  CMakeLists.txt.BASE.5454.txt  CMakeLists.txt.LOCAL.5454.txt  CMakeLists.txt.REMOTE.5454.txt  CMakeLists.txt.orig
src/GSL_wrappers/include/: Interpolant1D.hpp  gsl_wrappers.hpp  linear_least_quares.hpp  matrix.hpp  matrix_and_vector_iterators.hpp  minimization.hpp  polynomials.hpp
src/GSL_wrappers/include/GSL_wrappers/: hermite_polynomial_interpolation.hpp  linear_least_quares.hpp
src/GSL_wrappers/src/: Interpolant1D.cpp  gsl_wrappers.cpp  hermite_polynomial_interpolation.cpp  linear_least_quares.cpp  matrix.cpp  minimization.cpp  polynomials.cpp
src/Interpolation1D/: CMakeLists.txt  Interpolant1D.cpp  Interpolant1D.hpp  gsl_wrappers.cpp  gsl_wrappers.hpp
src/Interpolation1D/src/: Interpolant1D.cpp  gsl_wrappers.cpp
src/examples/: CMakeLists.txt
src/examples/hermite_polynomial_interpolation/: CMakeLists.txt  hermite_poly_interp_example.cpp
src/examples/interpolation/: CMakeLists.txt  interpolation1D.cpp
src/examples/linear_least_squares/: CMakeLists.txt  llsq.cpp
src/examples/polynomials/: CMakeLists.txt  polynomials_example.cpp
src/tests/: CMakeLists.txt  Interpolant1DTest.cpp  gsl_wrappersTest.cpp  interp1DTest.hpp  linear_least_squaresTest.hpp  matrixTest.hpp
tests/: CMakeLists.txt  Interpolant1DTest.cpp
